# curio

./: CMakeLists.txt  Main.qml  README.md  main.cpp
src/data/: Child.cpp  Child.h  Lesson.cpp  Lesson.h  LessonType.cpp  LessonType.h  RepeatLesson.cpp  RepeatLesson.h  RepeatType.cpp  RepeatType.h  Teacher.cpp  Teacher.h
src/export/: ExportManager.cpp  ExportManager.h
src/repository/: ChildRepository.cpp  ChildRepository.h  LessonRepository.cpp  LessonRepository.h  RepeatLessonRepository.cpp  RepeatLessonRepository.h  TeacherRepository.cpp  TeacherRepository.h
src/storage/: StorageManager.cpp  StorageManager.h
ui/: Colors.qml  Utils.qml
ui/base_components/: CalendarButton.qml  CustomCheckBox.qml  CustomPopup.qml  IconButton.qml  MenuButton.qml  NamedIconButton.qml  SearchBar.qml  SearchResultItem.qml  SelectButton.qml  SelectField.qml  TextButton.qml  TextInput.qml
ui/components/: ChildLessonDetails.qml  DayItem.qml  LessonDetails.qml  LessonItem.qml  WeekItem.qml
ui/window/: AuthWindow.qml  ChildWindow.qml  MainWindow.qml  SelectChildWindow.qml  SettingsWindow.qml  TeacherWindow.qml
